--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
   <!-- <link rel="stylesheet" type="text/css" href="bootstrap-3.1.1-dist/css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="bootstrap-3.1.1-dist/css/bootstrap-theme.min.css">
-  <link rel="stylesheet" type="text/css" href="bootstrap-3.1.1-dist/css/styles.css">
   <link rel="text/javascript" type="text/css" href="bootstrap-3.1.1-dist/css/bootstrap.min.js"> -->
 
-
-  <!-- Latest compiled and minified CSS -->
+<!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 
 <!-- Optional theme -->
@@ -18,7 +16,6 @@
 
 
 
-  <link type="text/javascript" href="app.js">
   <link href='http://fonts.googleapis.com/css?family=Exo:100,400' rel='stylesheet' type='text/css'>	
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <title></title>
@@ -108,46 +105,72 @@
 
 
     <div id="divOne">    
-      <p style="font-size: 60px;">
+      <span class="divText">
         Future State <br>
         Future State <br>
         Future State <br>
         Future State
-      </p>
+      </span>
     </div>
-    <div id ="mover" class="images">
-      <img src="images/sky-home.jpg">
+    <div id="clouds" >
+      <img class="images" src="images/sky-home.jpg">
+      <div class="cloudText">
+        <!-- "Lorem ipsum dolor sit amet, consectetur adipisicing elit" - JJ  -->
+      </div>  
+        
+     
     </div>
 
     <div id="divTwo">
-     <p class="divText">
-      Drop Us A Line. <br>
-      Current Listings.
-    </p>
+     <div id="quoteLeft" class="cloudText">
+      "Lorem ipsum dolor sit amet, consectetur adipisicing elit" - Client Name
+    </div>
+
+    <div id="quoteRight" class="cloudText">
+      "Hello, consectetur adipisicing elit" - Client Name
+    </div>
+
+    <div id="quoteBottom" class="cloudText">
+
+      We can connect you with a huge network
+    </div>
+
+    <div id="quoteRunoff" class="cloudText">
+
+      Drop us a line.
+    </div>    
   </div>
 
   <div id="jellyfish" class="images">
-    <img src="images/Ocean-Animals-animals-27960315-1920-1200.jpg">
+    <img class="images" src="images/Ocean-Animals-animals-27960315-1920-1200.jpg">
   </div>
 
   <div id="divThree">
-
-    Current Listings<br>
-    Contact Us
-   
+    <div id="contact">
+      Contact Us <br>
     <img id="circleOne" src="images/enso-circle.jpg">
     <img id="circleTwo" src="images/enso-circle.jpg">
     <img id="circleThree" src="images/enso-circle.jpg">
+  </div>
+
+  <div id="listings">
+    Current Listings <br>
+    <p>Listing One</p>
+    <p>Listing One</p>
+    <p>Listing One</p>
+    <p>Listing One</p>
+    <p>Listing One</p>
 
 
   </div>
+  </div>
 
-  <div id="footer">
+  <!-- <div id="footer">
     <div id="contact">
      <h4 class="divText">The Footer!</h4>
-   </div>
+   </div> -->
  </div>
-</div>                    <!-- End of Content -->
+                   <!-- End of Content -->
 
 
 
