adds stock photos

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </div>
   </div> --> 
 
-  <img src="http://placehold.it/1200x600">
+  <img class="img-responsive" src="images/mtHood.png">
 </div>
 
 
@@ -108,7 +108,7 @@
 
   <div id="divOne" class="row">    
     <div class="col-md-6 divLeft">
-      <img src="http://placehold.it/500x350">
+      <img class="img-responsive" src="images/worker.jpg">
     </div>
     <div class="col-md-6 divRight">
       Lorem ipsum dolor sit amet <br>
@@ -121,18 +121,20 @@
     </div>
   </div>
 
+
+
+
   <div id="clouds" class="row">
-    <!-- <img class="img-responsive col-md-12" src="images/sky-home.jpg"> -->
-    <!-- <div class="textOverlay"> -->
+   
     
-    <div class="quote col-md-5 col-md-offset-1">
+    <div class="quote col-xs-6 col-md-5 col-md-offset-1 textBox">
       <div class="col-md-6  yellowTop">Title</div><br>
       <div id="cloudText" class="col-md-6 ">
         "Lorem ipsum <br> dolor sit amet, consectetur adipisicing elit" 
       </div>
     </div>
 
-    <div class="quote col-md-5 col-md-offset-1">
+    <div class="quote col-xs-6 col-md-5 col-md-offset-1 textBox">
       <div class="col-md-6  yellowTop">Title</div><br>
       <div id="cloudText" class="col-md-6 ">
         "Lorem ipsum <br> dolor sit amet, consectetur adipisicing elit" 
@@ -166,7 +168,7 @@
 </div>
 
 <div id="jellyfish" class="row">
-  <img class="img-responsive col-lg-12" src="images/Ocean-Animals-animals-27960315-1920-1200.jpg">
+  <img class="img-responsive col-lg-12" src="images/portland.png">
 </div>
 
 <div id="divThree" class="row">
