--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <div class="modal-content">
 
               <div class="row aboutDiv">
-                <div class="col-xs-6"><img class="img-responsive dannImg" src="images/dann.jpg"></div>
+                <div class="col-xs-6"><img class="img-responsive dannImg" src="images/dann.JPG"></div>
                 
                 <div class="col-xs-6">
                   <span class="title">Dann Black</span><br>
