styles nav and about

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
   <div id="divOne" class="row container-fluid"> 
     <div class="col-xs-12 col-sm-6" id="office">
       <img class="img-responsive" src="images/office.jpg">
-  <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target=".static">Meet The Team</button>   
+   
 
 
     </div>
@@ -161,27 +161,29 @@
 
       <div class="row container-fluid">
        <div class="col-xs-12">
-        About Us <br>
+       <!--  About Us  -->
+       <span class="center"><button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target=".static">Meet The Team</button></span>  
+        <br>
         Future State Consulting was established in 2012 with the primary goal of assisting our clients in attracting and retaining  world class talent to help them with their business objectives.   We represent some of Portland&#39;s hottest technology companies and industry leaders within the Retail, Manufacturing and Clean Energy space.  Some of our talent areas of focus include:
       </div>
 
       <div class="col-xs-12 col-sm-6">
-        <ul>
-          <li>Project Managers/Agile Leads</li>
-          <li>Application/Software Architects</li>
-          <li>Software Developers</li>
-          <li>Programmers</li>
-          <li>QA Professionals</li>
-        </ul>
+        <!-- <ul> -->
+          <p>Project Managers/Agile Leads</p>
+          <p>Application/Software Architects</p>
+          <p>Software Developers</p>
+          <p>Programmers</p>
+          <p>QA Professionals</p>
+        <!-- </ul> -->
       </div>
       <div class="col-xs-12 col-sm-6">
-        <ul>
-          <li>Business Analysts</li>
-          <li>Testers</li>
-          <li>Web Developers</li>
-          <li>Database Administrators</li>
-          <li>Technical Writers</li>
-        </ul>
+        <!-- <ul> -->
+          <p>Business Analysts</p>
+          <p>Testers</p>
+          <p>Web Developers</p>
+          <p>Database Administrators</p>
+          <p>Technical Writers</p>
+        <!-- </ul> -->
       </div>
       <br>
 
