adds Muli font, background in it div

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 
 
   <link href='http://fonts.googleapis.com/css?family=Exo:100,400' rel='stylesheet' type='text/css'> 
+  <link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,300italic' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Muli:300,400,300italic' rel='stylesheet' type='text/css'>
+
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <title></title>
 </head>
@@ -349,7 +352,7 @@
 
   <div id="itRecruiting">
     <div class="col-md-5 col-md-offset-1 col-sm-5 col-xs-12"><h2>IT Recruiting</h2></div>
-    <div class="col-md-5 col-md-offset-1 col-xs-12">
+    <div class=" itDesc col-md-5 col-md-offset-1 col-xs-12">
 
       Talent gaps play havoc with project timelines, strategy, workflow and morale.<br><br> 
       They can derail competitive advantage. When that happens, you need a flexible and responsive IT recruiting partner to help you get back on track fast.<br><br>
@@ -446,11 +449,18 @@
 
           // $("#quotes").removeClass('slidingQuotes');
 
-          var array = [
-          ' " <i>Future State has been reliable and easy to work with in finding our engineering team highly targeted candidates to fill our mobile application development roles</i> " <br>CEO, San Francisco', 
-          ' " <i>No matter what kind of engineers I\'m looking for, Future State always finds top notch talent.</i> " <br>VP Engineering, Beaverton', 
-          ' " <i>Future State bridged the gap from recruiter to trusted partner very quickly; reliable, clever, sensible.  Great people to work with!</i> " <br>Director Quality Management,  Portland', 
-          ' " <i>Future State listened to my requirements and delivered a focused set of candidates that fit my needs. I look forward to working with them again</i> " <br>CTO, Portland'
+          // var array = [
+          // ' " <i>Future State has been reliable and easy to work with in finding our engineering team highly targeted candidates to fill our mobile application development roles</i> " <br>CEO, San Francisco', 
+          // ' " <i>No matter what kind of engineers I\'m looking for, Future State always finds top notch talent.</i> " <br>VP Engineering, Beaverton', 
+          // ' " <i>Future State bridged the gap from recruiter to trusted partner very quickly; reliable, clever, sensible.  Great people to work with!</i> " <br>Director Quality Management,  Portland', 
+          // ' " <i>Future State listened to my requirements and delivered a focused set of candidates that fit my needs. I look forward to working with them again</i> " <br>CTO, Portland'
+          // ];
+
+           var array = [
+          ' " Future State has been reliable and easy to work with in finding our engineering team highly targeted candidates to fill our mobile application development roles " <br>CEO, San Francisco', 
+          ' " No matter what kind of engineers I\'m looking for, Future State always finds top notch talent. " <br>VP Engineering, Beaverton', 
+          ' " Future State bridged the gap from recruiter to trusted partner very quickly; reliable, clever, sensible.  Great people to work with! " <br>Director Quality Management,  Portland', 
+          ' " Future State listened to my requirements and delivered a focused set of candidates that fit my needs. I look forward to working with them again " <br>CTO, Portland'
           ];
 
 
