mt hood compressed, bio spacing

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
       <div class="row aboutDiv container-fluid">
         <div class="col-xs-12 col-sm-6"><img class="img-responsive modalImg" src="images/dann2Cropped.png"></div>
 
-        <div class="col-xs-12 col-sm-6">
+        <div class="bio col-xs-12 col-sm-6">
           <span class="title">Dann Black</span><br>
           Dann Black is the Founder of Future State Consulting and leads the Business Development effort for the organization.  Dann started in the Technology staffing and recruiting business shortly after receiving his Business Degree from Washington State University in 1995.  He takes pride in the many strong relationships that have been built in the NW and believes strongly in Future States core values built on Respect, Client Service and Teamwork.  Dann has a proven ability to organize and develop record-breaking teams and increase market share for partners. Dann is a successful manager with a lead-by-example approach and a strong focus on delivering value to clients.
           <br>&nbsp
@@ -237,7 +237,7 @@
       <div class="row aboutDiv container-fluid">
         <div class="col-xs-12 col-sm-6"><img class="img-responsive modalImg" src="images/harrison2Cropped.png"></div>
 
-        <div class="col-xs-12 col-sm-6">
+        <div class="bio col-xs-12 col-sm-6">
           <span class="title">Harrison Bishop</span><br>
           Harrison is Partner and Managing Director for Future State Consulting.  He jumped into the recruiting industry after his baseball career with the Pittsburgh Pirates came to an end and quickly found success by combining an innate competitive spirit and ability to build lasting relationships.  Harrison engages in new business development and account management but his primary focus for Future State is the direct recruitment of premier IT professionals.  He prides himself on creating a complete experience for both clients and candidates that transcends the industry.
           <br>  
@@ -250,12 +250,11 @@
       <div class="row aboutDiv container-fluid">
 
         <div class="col-xs-12 col-sm-6"><img class="img-responsive modalImg" src="images/sarahCropped.png"></div>
-        <div class="col-xs-12 col-sm-6">
+        <div class="bio col-xs-12 col-sm-6">
           <span class="title">Sarah Fagan</span><br>
           Sarah is a technical recruiting professional with over a decade of experience in the staffing industry.   As a Senior Talent Executive, she is responsible for recruiting IT professionals as well as maintaining long term relationships with those candidates.   Sarah also engages with clients both in new business development and account management.  This enables her to focus on both candidate and client satisfaction.
 
           Sarah grew up in Portland and loves everything fitness/sport related.  While in college at Warner Pacific, she played for the women&#39;s soccer team.  She graduated with a Bachelor&#39;s Degree in Psychology and a minor in child development.  Sarah is a mom to an awesome son named Kieran.  He is not following her footsteps in soccer because he is an insane football fanatic.  And most importantly, he has been well trained to love THE DUCKS! 
-          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
         </div>
 
       </div>
