--- a/index.html
+++ b/index.html
@@ -298,11 +298,11 @@
 
 
 <div id="teamListings" class="row">
-  <div class="col-md-4 col-md-offset-2">
+  <div class="col-xs-5 col-md-4 col-md-offset-2">
     <span class="center"><button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target=".static">Meet The Team</button></span>
   </div>
 
-  <div class="col-md-4 col-md-offset-2">
+  <div class="col-xs-5 col-xs-offset-1 col-md-4 col-md-offset-2">
     <span class="center"><button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#listings">Current Listings</button></span>
   </div>
   <!-- <a data-toggle="modal" data-target="#listings">Current Listings</a> -->
@@ -410,7 +410,7 @@
 
 
 <div id="divThree">
-  <div class="col-md-12">&copyFuture State Consulting</div>
+  <div class="fsBottom col-md-12">&copyFuture State Consulting</div>
   
 
 
