--- a/index.html
+++ b/index.html
@@ -282,7 +282,23 @@
           degree in physics and Spanish. During the school year, she continues to pursue a technical degree in 
           civil engineering at Columbia University in the City of New York. She describes herself as an employee who not only can work in a variety of technical environments, but is also able to excel in lead generation and marketing. 
 
-          Jenna is excited to return to the west (best) coast where she does anything she can to get outside. If she’s not running, hiking, climbing or swimming she’s probably at the local farmers market looking for the freshest produce to cook. She’s excited at the opportunity to work for a world class consulting firm and learn the art of successful consulting.
+          Jenna is excited to return to the west (best) coast where she does anything she can to get outside. If she&#39;s not running, hiking, climbing or swimming she&#39;s probably at the local farmers market looking for the freshest produce to cook. She&#39;s excited at the opportunity to work for a world class consulting firm and learn the art of successful consulting.
+        </div>
+        <br><br>
+      </div>
+
+      <div class="row aboutDiv container-fluid">
+
+        <div class="col-xs-12 col-sm-6">
+          <img class="img-responsive modalImg" src="images/janCropped.png">
+          <a href="jparis@fsconsults.com" target="_top">jparis@fsconsults.com</a>
+        </div>
+        <div class="col-xs-12 col-sm-6">
+          <span class="title">Jan Paris</span><br>
+          Jan has joined the Future State team to fill the role of Office Manager.  Jan&#39;s background includes over 25 years of private and government sector experience in Human Resources, Employee Benefits, Payroll, Technical Writing, Employee Training, and HRIS.
+
+          Her goal is to build positive working relationships with our consultants and our clients; anticipate their needs, and respond quickly to their requests and questions.
+          When not working, Jan&#39;s hobby is buying and selling antiques. She has a small antique space located in Hillsboro.  She and her husband, Dave, live in Newberg.  She has two grown children and two fabulous grandsons!  She is an avid Beaver fan as both kids are Beavs&#8230;&#8230;so GO BEAVS!!
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
         </div>
         <br><br>
@@ -298,11 +314,11 @@
 
 
 <div id="teamListings" class="row">
-  <div class="col-xs-5 col-md-4 col-md-offset-2">
+  <div class="col-xs-5 col-sm-4 col-sm-offset-2">
     <span class="center"><button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target=".static">Meet The Team</button></span>
   </div>
 
-  <div class="col-xs-5 col-xs-offset-1 col-md-4 col-md-offset-2">
+  <div class="col-xs-5 col-xs-offset-1 col-sm-4 col-sm-offset-2">
     <span class="center"><button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#listings">Current Listings</button></span>
   </div>
   <!-- <a data-toggle="modal" data-target="#listings">Current Listings</a> -->
